adding h2 db for develop

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=propvalue
+
+spring.h2.console.enabled=true
+spring.datasource.generate-unique-name=false
+spring.datasource.url=jdbc:h2:mem:propvalue
+spring.datasource.name=propvalue
